20080409 machines/{specplus3.c,specplus3e.c}: have the +3e share the +3 FDC
         (fixes bug #1931947) (Gergely Szasz).
20080409 disk/upd_fdc.c: initialise head_load member of upd_fdc struct
         (fixes bug #1931555) (Gergely Szasz).
20080415 fuse.c,memory.[ch],menu.c,tape.[ch],ui/win32/win32ui.c: don't use tape
         traps or auto-load snapshots if we are using a custom ROM as the entry
         points are very likely to have moved (Fred).
20080417 kempmouse.[ch],fuse.c: write Kempston mouse status to snapshots
         (Fred).
20080418 simpleide.c: add snapshot support for Simple 8-bit IDE interface
         (Fred).
20080425 divide.c: add snapshot support for DivIDE interface (Fred).
20080501 Makefile.am,configure.in,dck.c,fuse.c,input.c,keysyms.pl,menu.c,
         ui/Makefile.am,ui/fb/fbkeyboard.c,ui/sdl/{sdldisplay.c,sdlkeyboard.c},
         ui/svga/svgakeyboard.c,ui/widget,ui/widget/Makefile.am,
         ui/xlib/{xdisplay.c,xerror.c,xkeyboard.c},utils.c,widget: move the
         widget UI files to the ui subdirectory, remove remnants of the GGI UI
         (Fred).
20080502 ui/gtk/{Makefile.am,gtkdisplay.c},
         ui/scaler/{Makefile.am,scaler.[ch],scaler_hq[23]x.c,
         scaler_internals.h,scalers.c},ui/sdl/sdldisplay.c,
         ui/win32/win32display.c,ui/xlib/xdisplay.c: add HQ2x and HQ3x scalers
         (patch #1952304) (Gergely Szasz).
20080511 ui/scaler/scalers.c: fix green8_Mask and green16_Mask for 555 16 bit
         graphics modes and for 888 32 bit big endian graphics modes (Fred).
20080513 ui/fb/fbdisplay.c: ensure framebuffer display is restored on all
         errors (patch #1912101).
20080517 Makefile.am,fuse.c,mempool.[ch],unittests/unittests.c: add simple
	 memory pool code.
20080518 screenshot.c: missed file from patch #1952304 (Gergely Szasz).
20080518 machines/specplus3.h: remove reference to old specplus3_disk_present
         (Fred).
20080522 ui/{fb/fbdisplay.c,widget/Makefile.am}: fix compilation failures
	 (Stuart).